# diary-generator

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  katex.rs  lib.rs  main.rs  months.rs  utils.rs
src/syndication/: atom.rs
tests/: atom_feed_page.rs  bugs.rs  index_page.rs
tests/utils/: mod.rs  page.rs
