[package]
name = "diary-generator"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
async-recursion = { version = "0.3" }
either = { version = "1" }
futures-util = { version = "0.3" }
itertools = { version = "0.10" }
maud = { version = "0.23" }
notion-generator = { git = "https://github.com/Mathspy/notion-generator", rev = "969cf33" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
time = { git = "https://github.com/Mathspy/time", branch = "fmt-write", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[dev-dependencies]
tempdir = { version = "0.3" }
